apply plugin: 'com.android.application'

android {
    buildToolsVersion '27.0.3'
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    compileSdkVersion 27
    dataBinding {
        enabled true
    }
    defaultConfig {
        applicationId 'com.wireguard.android'
        minSdkVersion 21
        targetSdkVersion 27
        versionCode 406
        versionName '0.4.1'
    }
    externalNativeBuild {
        cmake {
            path 'tools/CMakeLists.txt'
        }
    }
}

dependencies {
    annotationProcessor 'com.google.dagger:dagger-compiler:2.14.1'
    implementation 'com.android.databinding:library:1.3.3'
    implementation 'com.android.support:support-annotations:27.0.2'
    implementation 'com.commonsware.cwac:crossport:0.2.1'
    implementation 'com.getbase:floatingactionbutton:1.10.1'
    implementation 'com.google.dagger:dagger:2.14.1'
    implementation 'net.sourceforge.streamsupport:android-retrofuture:1.6.0'
    implementation 'net.sourceforge.streamsupport:android-retrostreams:1.6.0'
}

repositories {
    maven {
        url "https://s3.amazonaws.com/repo.commonsware.com"
    }
}
